changes p tags to span as inline elements required for proper alignment

--- a/intro-to-web-project/styles.scss
+++ b/intro-to-web-project/styles.scss
@@ -11,3 +11,8 @@ nav {
     display: flex;
 }
 
+.paragraph-picture {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
