--- a/intro-to-web-project/styles.css
+++ b/intro-to-web-project/styles.css
@@ -10,3 +10,9 @@
 nav {
   display: flex;
 }
+
+.paragraph-picture {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
