--- a/intro-to-web-project/styles.scss
+++ b/intro-to-web-project/styles.scss
@@ -3,10 +3,6 @@
     padding: 0;
 }
 
-#logo {
-    width: 10px;
-}
-
 nav {
     display: flex;
 }
@@ -15,4 +11,14 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+main {
+    display: flex;
+    align-items: center;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
 }
