--- a/intro-to-web-project/styles.scss
+++ b/intro-to-web-project/styles.scss
@@ -1,14 +1,21 @@
 * {
-    margin: 10px;
-    padding: 0;
     font-family: sans-serif;
+    background-color: rgb(255, 255, 247);
 }
 
+$color-primary: midnightblue;
+$color-secondary: rgb(81, 185, 255);
+$color-white: white;
 
 nav {
+    margin: 45px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.text-highlight {
+    color: $color-secondary;
 }
 
 .paragraph-picture {
@@ -18,19 +25,33 @@ nav {
 }
 
 main {
+    font-size: 30px;
+    color: $color-primary;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    text-align: center;
+}
+
+.button {
+    font-weight: bold;
+    color: $color-white;
+    background-color: $color-primary;
+    border: 2px solid $color-primary;
+    padding: 15px 25px;
+    border-radius: 5%;
 }
 
 #login {
-    border: 2px solid black;
+    color: $color-primary;
+    border: 2px solid $color-primary;
     padding: 15px 25px;
-    border-radius: 15%;
+    border-radius: 5%;
 }
 
 footer {
+    background-color: blanchedalmond;
     display: flex;
     flex-direction: column;
     justify-content: center;
