changed footer font and font-size to more closely match reference picture

--- a/intro-to-web-project/styles.css
+++ b/intro-to-web-project/styles.css
@@ -61,6 +61,9 @@ nav {
 }
 
 footer {
+  color: midnightblue;
+  font-size: 35px;
+  font-weight: bold;
   background-color: blanchedalmond;
   display: flex;
   flex-direction: column;
