--- a/intro-to-web-project/styles.scss
+++ b/intro-to-web-project/styles.scss
@@ -65,6 +65,9 @@ nav {
 }
 
 footer {
+    color: $color-primary;
+    font-size: 35px;
+    font-weight: bold;
     background-color: blanchedalmond;
     display: flex;
     flex-direction: column;
